--- a/app/views/layouts/_signupLoginModal.html.erb
+++ b/app/views/layouts/_signupLoginModal.html.erb
@@ -87,7 +87,20 @@
 
   @media (max-width:575px){
     .modal-content{
-      margin-top:-510px;
+      margin-top:0vh;
+      margin-right:-10px;
+    }
+  }
+    @media (max-width:390px){
+    .modal-content{
+      margin-top:0vh;
+      margin-right:-50px;
+    }
+  }
+    @media (max-width:350px){
+    .modal-content{
+      margin-top:-80vh;
+      margin-right:-50px;
     }
   }
   #loginModal:before {
