--- a/app/views/admin/_comments.html.erb
+++ b/app/views/admin/_comments.html.erb
@@ -34,3 +34,4 @@
       </tr>
   <% end %>
 </table>
+<%= will_paginate @comments, :renderer => WillPaginate::ActionView::BootstrapLinkRenderer unless @unpaginated || @comments.empty? %>
