--- a/app/views/questions/_new_question.html.erb
+++ b/app/views/questions/_new_question.html.erb
@@ -21,11 +21,11 @@
       <% if node.status == 4 %>
           <p class="alert alert-warning moderated">
           <% if logged_in_as(['admin','moderator']) %>
-          <%= t('dashboard._node_moderate.first_time_post') %>
-          <a class="btn btn-outline-secondary btn-sm" href="/moderate/publish/<%= node.id %>"><%= t('dashboard.moderate.approve') %></a>
-          <a class="btn btn-outline-secondary btn-sm" href="/moderate/spam/<%= node.id %>"><%= t('dashboard.moderate.spam') %></a>
+          <%= translation('dashboard._node_moderate.first_time_post') %>
+          <a class="btn btn-outline-secondary btn-sm" href="/moderate/publish/<%= node.id %>"><%= translation('dashboard.moderate.approve') %></a>
+          <a class="btn btn-outline-secondary btn-sm" href="/moderate/spam/<%= node.id %>"><%= translation('dashboard.moderate.spam') %></a>
           <% else %>
-          <%= raw t('dashboard.moderate.pending_approval', :url => '/wiki/moderation') %>
+          <%= raw translation('dashboard.moderate.pending_approval', :url => '/wiki/moderation') %>
           <% end %>
       </p>
       <% end %>
