Changed t to translation (#7677)
Changed t to translation on lines 61 and 62.

--- a/app/views/tag/contributors.html.erb
+++ b/app/views/tag/contributors.html.erb
@@ -58,8 +58,8 @@
 
   <br />
 
-    <h3 style="margin-top:0;"><%= raw t('tag.contributors.contributors_for', :tag_name => params[:id]) %></h3>
-    <p><%= t('tag.contributors.contributions_over_past_year') %></p>
+    <h3 style="margin-top:0;"><%= raw translation('tag.contributors.contributors_for', :tag_name => params[:id]) %></h3>
+    <p><%= translation('tag.contributors.contributions_over_past_year') %></p>
 
   <% end %>
 
