--- a/app/views/editor/rich.html.erb
+++ b/app/views/editor/rich.html.erb
@@ -292,7 +292,7 @@
       -->
     </div>
 
-    <button class="btn btn-lg btn-outline-secondary btn-more">...</button>
+    <button class="btn btn-lg btn-outline-secondary btn-more"><i class="fa fa-clock-o"></i></button>
 
     <span> &nbsp; By publishing, you agree to <a href="https://publiclab.org/licenses">open source your work</a><span class="d-none d-md-inline"> so that others may use it.</span></span>
     <button class="ple-publish btn btn-lg btn-primary float-right disabled"><% if controller.action_name == "edit" && @node.status == 3 %>Save<% else %>Publish<% end %></button>
